<!--
  ~ Copyright (c) 2020 MotionEye Client by Developer From Jokela, All Rights Reserved.
  ~ Licensed with MIT
  -->

<resources>
    <string name="app_name">motionEye Client</string>
    <string name="title_devices">Devices</string>
    <string name="no_devices_added">No Devices Added</string>
    <string name="add_new_device">Add New Device</string>
    <string name="title_activity_setup_start_screen">Add Device Wizard</string>
    <string name="welcome_to_wizard">Welcome to the Devices Wizard</string>
    <string name="continue_setup">Continue</string>
    <string name="previous_setup">Previous</string>
    <string name="cd_rpi">Raspberry Pi</string>
    <string name="setup_device_hint">Let\'s setup your device by clicking Continue</string>
    <string name="wizard_device_type">Configure Network Settings</string>
    <string name="optional_ddns_port">(Optional) DDNS Port</string>
    <string name="optional_local_port">(Optional) Local Port</string>
    <string name="ddns_hostname">(Optional) DDNS Hostname</string>
    <string name="local_hostname">motionEye Hostname</string>
    <string name="wizard_login_settings">Login Settings</string>
    <string name="wizard_username">Username</string>
    <string name="wizard_password">Password</string>
    <string name="wizard_local_help">Enter Device\'s local IP Address for local access via Wi-Fi</string>
    <string name="wizard_ddns_help">Enter your DDNS address for remote access using port forwarding.</string>
    <string name="wizard_port_help">Enter optionally Port number for motionEye server, if you have set custom port number</string>
    <string name="select_wifi">Select Local Wi-Fi Network</string>
    <string name="no_wifi_networks_saved">No Wifi Networks Saved! Please add one from Device\'s Wifi Settings.</string>
    <string name="connected">connected</string>
    <string name="checking_connection">Checking connection</string>
    <string name="wizard_trying_login">Checking Authentication</string>
    <string name="wizard_validating">Validating parameters</string>
    <string name="wizard_check_wifi">Checking Local Connection</string>
    <string name="wizard_check_login">Trying to login</string>
    <string name="wizard_check_ddns">DDNS Connection</string>
    <string name="wizard_not_motioneye">Not motionEye Server, please check URL and port if needed</string>
    <string name="wizard_wrong_credentials">Wrong authentication credentials, please check username and password</string>
    <string name="wizard_completed">Device %1$s added successfully!</string>
    <string name="wizard_completed_desc">Your Device has been added successfully!</string>
    <string name="wizard_getting_details">Get Information about motionEye</string>
    <string name="wizard_finish">Close Setup</string>
    <string name="title_activity_camera_viewer">Camera Viewer</string>

    <string name="title_activity_full_camera_viewer">FullCameraViewer</string>
    <string name="loading">Loading Stream…</string>
    <string name="ddns_available">DDNS Available</string>
    <string name="change_protocol">Change Protocol</string>
    <string name="change_protocol_desc">You may speed up loading times by changing protocol</string>
    <string name="http_or_rtsp">HTTP works better if you cannot port forward any other port, but if you can, it\'s recommended to swith to RTSP, as it\'s designed for live video feed.</string>
    <string name="try_again">Try Again</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="action">Action</string>
    <string name="settings">Settings</string>
    <string name="title_activity_device_settings">Device Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="motioneye_settings">motionEye Settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="network_settings">Network Settings</string>
    <string name="local_hostame_summary">Hostname or IP Address to access device in local network</string>
    <string name="local_port_summary">If your motionEye is not running on default port 80, please set the correct port number.</string>
    <string translatable="false" name="def_ip">0.0.0.0</string>
    <string translatable="false" name="def_port">80</string>
    <string name="optional_ddns_port_summary">If your motionEye Server is port forwarded to other port than 80, please set that here</string>
    <string name="admin_username">Admin Username</string>
    <string name="admin_password">Admin Password</string>
    <string name="surv_username">Surveillance Username</string>
    <string name="surv_password">Surveillance Password</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="motioneye_version">motionEye Version</string>
    <string name="motion_version">Motion Version</string>
    <string name="os_version">OS Version</string>
    <string name="reboot_summary">Reboot Device by clicking here</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="shutdown_summary">Shutdown Device by clicking here</string>
    <string name="delete_camera">Delete this device</string>
    <string name="delete_camera_summary">Delete this device from list of devices</string>
    <string name="cancel">Cancel</string>
    <string name="delete_camera_caution">Are you sure to delete this camera from devices list?</string>
    <string name="failed_device_delete">Failed to delete device: %1$s</string>
    <string name="title_recordings">Recordings</string>
    <string name="title_activity_movie_view">Movie Viewer</string>
    <string name="other_settings">Other settings</string>
    <string name="open_by_default">Open by default</string>
    <string name="open_by_default_desc">Open this device\'s cameras stream as soon you open the app. It\'s handy when you have only a single device added.</string>
    <string name="location_permissions">Location permission is required to retrieve WiFi networks.</string>
    <string name="approve_loc_permission">Give location permission to this app</string>
    <string name="loading_video">Loading video…</string>
    <string name="task_failed">Task failed with status code %1$s</string>
    <string name="skip">Skip</string>
    <string name="disable_device_selection">Disable device selection</string>
    <string name="disable_device_selection_msg">By disabling this you\'ll get rid of the device selector at the bottom</string>
    <string name="ui_mode">UI mode</string>
    <string name="video_playback_error">Video playback error: %1$s</string>
    <string name="fullscreen">Full Screen</string>
    <string name="downloading_recording_from">Downloading recording from %1$s</string>
    <string name="download">Download</string>
    <string name="allow_permissions">Allow Storage permissions to download the video</string>
    <string name="download_error">Download error: %1$s</string>
    <string name="video_downloaded">Video downloaded</string>
    <string name="framerateFactor">Frame rate factor</string>
    <string name="framerateFactorDesc">Frame rate factor regulates frequency of image refresh process. Lower number, slower refresh. Lowering this value is useful, if image is slow to refresh or laggy. When using mobile data, value is decreased for better speed.</string>

</resources>
