<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. MotionEye Client by Developer From Jokela, All Rights Reserved.
  ~ Licenced with MIT:
  ~
  ~  Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  ~  and associated documentation files (the "Software"), to deal in the Software without restriction,including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~   The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~    SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_width="match_parent"
        android:title="@string/motioneye_settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="advancedSettings"
            android:enabled="false"

            android:title="@string/advanced_settings" />
        <Preference
            android:key="admin_username"
            android:enabled="false"
            android:summary="username"
            android:title="@string/admin_username" />
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:key="admin_password"
            android:summary="*****"
            android:title="@string/admin_password" />
        <Preference
            android:key="surv_username"
            android:summary="username"
            android:enabled="false"

            android:title="@string/surv_username" />
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:key="surv_password"
            android:summary="*****"
            android:title="@string/surv_password" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="motionEyeVersion"
            android:summary="v0.0"
            android:title="@string/motioneye_version"
            app:isPreferenceVisible="false" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="motionVersion"
            android:summary="v0.0"
            android:title="@string/motion_version"
            app:isPreferenceVisible="false" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="OSVersion"
            android:summary="LinuxDistro 0.0"
            android:title="@string/os_version"
            app:isPreferenceVisible="false" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="reboot"
            android:summary="@string/reboot_summary"
            android:title="@string/reboot"
            app:isPreferenceVisible="false" />
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="shutdown"
            android:summary="@string/shutdown_summary"
            android:title="@string/shutdown"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <!-- TODO Implement Newtork Settings
      -->
    <PreferenceCategory android:title="@string/network_settings">

        <Preference
            android:key="ip_addr"
            android:summary="@string/local_hostame_summary"
            android:title="@string/local_hostname" />
        <Preference
            android:key="ddns_addr"
            android:summary="@string/local_hostame_summary"
            android:title="@string/ddns_hostname" />
        <Preference
            android:key="port"
            android:summary="@string/local_port_summary"
            android:title="@string/optional_local_port" />

        <Preference
            android:key="ddns_port"
            android:summary="@string/optional_ddns_port_summary"
            android:title="@string/optional_ddns_port" />
    </PreferenceCategory>

    <Preference
        android:key="delete_camera"
        android:summary="@string/delete_camera_summary"
        android:title="@string/delete_camera" />
</PreferenceScreen>