<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:title="@string/title_recordings">

        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="no_selection"
            android:summary="@string/disable_device_selection_msg"
            android:title="@string/disable_device_selection"
            app:enabled="false" />
        <ListPreference
            android:defaultValue="expanded"
            android:entries="@array/recording_modes"
            android:entryValues="@array/recordings_mode"
            android:key="ui_mode"
            android:title="@string/ui_mode" />
    </PreferenceCategory>
</PreferenceScreen>