<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 MotionEye Client by Developer From Jokela, All Rights Reserved.
  ~ Licensed with MIT
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:gravity="center_horizontal"
                android:text="@string/wizard_device_type"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/local_hostname"

                app:helperText="@string/wizard_local_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/local_hostname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"

                android:hint="@string/ddns_hostname"
                app:helperText="@string/wizard_ddns_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ddns_hostname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/optional_local_port"

                app:helperText="@string/wizard_port_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/local_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/optional_ddns_port"

                app:helperText="@string/wizard_port_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ddns_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>