<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 MotionEye Client by Developer From Jokela, All Rights Reserved.
  ~ Licenced with MIT
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:gravity="center_horizontal"
                android:text="@string/select_wifi"
                android:textSize="24sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/permissionWarning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="6dp"
                        app:srcCompat="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:gravity="center"
                        android:text="@string/location_permissions"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/loc_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/approve_loc_permission" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ListView
                android:id="@+id/wifiNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>