<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. MotionEyeClient by Developer From Jokela, All Rights Reserved.
  ~ Licenced with MIT;
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:gravity="center_horizontal"
                android:text="@string/wizard_validating"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/errorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="ErrorDetails"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/local_connection_test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progress1"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0" />

                <ImageView
                    android:id="@+id/statusimage1"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_waiting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wizard_check_wifi"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ddns_connection_test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/statusimage2"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_waiting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wizard_check_ddns"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progress3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/statusimage3"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_waiting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wizard_check_login"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progress4"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/statusimage4"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_waiting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/wizard_getting_details"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>